# dandy

./: .gitignore  README.md  setup.cfg  setup.py
src/dandy/content/: __init__.py  admin.py  apps.py  blinker.py  conf.py  exceptions.py  mixins.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
src/dandy/content/migrations/: 0001_initial.py  0002_auto_20191104_0542.py  0002_simplify_article_model.py  0003_auto_20191107_0549.py
standalone/: manage.py
standalone/standalone/: settings.py  urls.py  wsgi.py
standalone/standalone/settings/: base.py  dev.py
