[metadata]
name = Groom-dandy
version = attr: dandy.__version__
description = Groom Dany - Content Creation for Publishers
long_description = file: README.md
keywords = Groom Suite, Dandy
author = Groom
author_email = ntuckovic@gmail.com
license = Proprietary
license_file = LICENSE
url = https://github.com/GroomSuite/dandy
# download_url = add url
platforms = POSIX, Microsoft, MacOS
classifiers =
    Development Status :: 4 - Beta
    License :: Other/Proprietary License
    Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Intended Audience :: Content publishers
    Intended Audience :: End Users/Web
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages=find:
python_requires = > 3.5, < 3.8

zip_safe = False
include_package_data = True
install_requires =
	Django==2.2.6
    Pillow
    psycopg2
    djangorestframework==3.11.0
    Markdown==3.1.1
    django-filter==2.2.0
    dynamic-rest==1.9.6

[options.packages.find]
where=src

[options.extras_require]
dev =
    tox
docs =
	sphinx
	sphinx_rtd_theme
lint =
    isort
    yapf
    pylint
    pylint-django
sentry =
	raven
test =
    ipdb
    mock
	model-mommy
    pytest>=3.0
	pytest-cache
    pytest-cov
    pytest-django
	pytest-runner
	pytest-sugar
	responses
	testfixtures
    freezegun

[bdist_wheel]
universal=1

[aliases]
test=pytest

[tool:pytest]
addopts =
	--reuse-db
    --junitxml=pytest-junit.xml
	--ds=standalone.settings.testing
	-s
django_find_project = false
testpaths = tests

[coverage:run]
branch = True
source = dandy

[paths]
source =
   src/dandy
   .tox/*/lib/python*/site-packages/dandy

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover

[coverage:paths]
source =
    src/

[yapf]
based_on_style = pep8

[isort]
# Reference: https://github.com/timothycrosley/isort/wiki/isort-Settings
skip=.tox,bin,changelogs,demo,docs
atomic=true
multi_line_output=3
known_django=django
known_rest_framework=rest_framework
known_third_party=mock,pytest,model_mommy,pytz,faker,daguerre,model_utils,PIL,jwplatform,wikimarkup,wikipedia,bs4,facepy,facebook,piexif,responses,django_filters,openpyxl,ujson,furl,bleach
known_first_party=dandy
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,REST_FRAMEWORK,FIRSTPARTY,LOCALFOLDER
